# AntiFraudBot

./: .env  .env.prod  .gitignore  README.md  pyproject.toml
data/: data.json
source/: keyword.txt
source/example/:  (1).txt   (10).txt   (11).txt   (12).txt   (13).txt   (2).txt   (20).txt   (27).txt   (28).txt   (29).txt   (3).txt   (30).txt   (31).txt   (32).txt   (33).txt   (34).txt   (35).txt   (36).txt   (37).txt   (38).txt   (39).txt   (4).txt   (40).txt   (41).txt   (42).txt   (43).txt   (44).txt   (45).txt   (46).txt   (47).txt   (48).txt   (49).txt   (5).txt   (50).txt   (51).txt   (52).txt   (53).txt   (6).txt   (7).txt   (8).txt  (+1 more)
src/plugins/: example_push.py  help.py  keyword_detection.py  knowledge_push.py
src/plugins/url_detection/: __init__.py  api.py
utils/: config.py  init.py
